--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,10 +32,10 @@
     <div id="actions" class="section">
         <h2>Actions</h2>
         <div class="action-buttons">
-        <button onclick="buildRoad()" id="build-road">Build Road</button>
-        <button onclick="buildSettlement()" id="build-settlement">Build Settlement</button>
-        <button onclick="buildCity()"id="build-city">Build City</button>
-        <button onclick="devCard()"id="buy-dev-card">Buy Development Card</button>
+        <button id="build-road">Build Road</button>
+        <button id="build-settlement">Build Settlement</button>
+        <button id="build-city">Build City</button>
+        <button id="buy-dev-card">Buy Development Card</button>
         </div>
         
 
