--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,11 +20,11 @@
     <div id="resources" class="section">
         <h2>Your Resources</h2>
         <div class="resources-grid">
-        <div class="resource" data-resource="brick">Brick: <span>0</span></div>
-        <div class="resource" data-resource="lumber">Lumber: <span>0</span></div>
-        <div class="resource" data-resource="ore">Ore: <span>0</span></div>
-        <div class="resource" data-resource="grain">Grain: <span>0</span></div>
-        <div class="resource" data-resource="wool">Wool: <span>0</span></div>
+        <div class="resource" data-resource="brick">Brick: <p><span id="brick_amount">-</span></p></div>
+        <div class="resource" data-resource="lumber">Lumber: <p><span id="lumber_amount">-</span></p></div>
+        <div class="resource" data-resource="ore">Ore: <p><span id="ore_amount">-</span></p></div>
+        <div class="resource" data-resource="grain">Grain: <p><span id="grain_amount">-</span></p></div>
+        <div class="resource" data-resource="wool">Wool: <p><span id="wool_amount">-</span></p></div>
         </div>
         <button id="trade-4-1">Trade 4:1</button>
     </div>
@@ -37,6 +37,7 @@
         <button id="build-city">Build City</button>
         <button id="buy-dev-card">Buy Development Card</button>
         <button id="end-turn">End Turn</button>
+        <button id="update">Update</button>
         </div>
         
 
@@ -48,7 +49,6 @@
         <button class="dev-card" id="dev-year-of-plenty">Year of Plenty</button>
         </div>
     </div>
-
     <script src="index.js"></script>
     </body>
 </html>
