--- a/frontend/game.html
+++ b/frontend/game.html
@@ -36,6 +36,7 @@
         <button id="build-settlement">Build Settlement</button>
         <button id="build-city">Build City</button>
         <button id="buy-dev-card">Buy Development Card</button>
+        <button id="end-turn">End Turn</button>
         </div>
         
 
