--- a/frontend/game.html
+++ b/frontend/game.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+    <div id="player-info" class="section">
+        <p id="player-identity">Connecting...</p>
+    </div>
+
     <div id="dice-roll" class="section">
         <h2>Dice Roll Outcome</h2>
         <p id="dice-result">--</p>
