--- a/frontend/game.html
+++ b/frontend/game.html
@@ -9,6 +9,7 @@
     <body>
     <div id="player-info" class="section">
         <p id="player-identity">Connecting...</p>
+        <button id="refresh-game">Refresh Game</button>
     </div>
 
     <div id="dice-roll" class="section">
