--- a/frontend/game.html
+++ b/frontend/game.html
@@ -25,11 +25,11 @@
     <div id="resources" class="section">
         <h2>Your Resources</h2>
         <div class="resources-grid">
-        <div class="resource" data-resource="brick">Brick: <span>na</span></div>
-        <div class="resource" data-resource="lumber">Lumber: <span>na</span></div>
-        <div class="resource" data-resource="ore">Ore: <span>na</span></div>
-        <div class="resource" data-resource="grain">Grain: <span>na</span></div>
-        <div class="resource" data-resource="wool">Wool: <span>na</span></div>
+        <div class="resource" data-resource="brick">Brick: <span>0</span></div>
+        <div class="resource" data-resource="lumber">Lumber: <span>0</span></div>
+        <div class="resource" data-resource="ore">Ore: <span>0</span></div>
+        <div class="resource" data-resource="grain">Grain: <span>0</span></div>
+        <div class="resource" data-resource="wool">Wool: <span>0</span></div>
         </div>
         <button id="trade-4-1">Trade 4:1</button>
     </div>
