added save/load functionality

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -52,7 +52,10 @@
             <button class="dev-card" id="dev-road-building" data-card="2">Road Building (<span>0</span>)</button>
             <button class="dev-card" id="dev-year-of-plenty" data-card="3">Year of Plenty (<span>0</span>)</button>
             <button class="dev-card" id="dev-monopoly" data-card="4">Monopoly (<span>0</span>)</button>
-        </div>        
+        </div>
+
+        <button onclick="save()">Save</button>
+        <button onclick="load()">Load</button>
     </div>
 
     <script src="game.js"></script>
