added start game button instead of autostarting once 4 players have joined

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -56,6 +56,7 @@
 
         <button onclick="save()">Save</button>
         <button onclick="load()">Load</button>
+        <button onclick="start()">Start Game</button>
     </div>
 
     <script src="game.js"></script>
